# IGVC-Bolt

./: CMakeLists.txt  README.md  package.xml
config/: ackermann_controller.yaml  ctrl_joint_state_publisher.yaml  steer_bot_hardware_gazebo.yaml
launch/: display.launch  gazebo.launch  teleop.launch
models/bolt_lanes/: model.config  model.sdf
models/bolt_lanes/meshes/: Bolt_lanes.dae
models/ground_plane/: model.config  model.sdf
models/ground_plane/materials/scripts/: ground_plane.material
rviz/: bolt.rviz
urdf/: bolt.gazebo.xacro  bolt.trans.xacro  bolt.urdf.xacro  materials.xacro
worlds/: Lane1.world
