<?xml version="1.0"?>
<package format="2">
    <name>igvc_bolt</name>
    <version>0.0.0</version>
    <description>Simulate Team Abhiyaan's Bolt in Gazebo</description>

    <maintainer email="jnanneswar@todo.todo">jnanneswar</maintainer>

    <license>BSD</license>

    <url type="website">www.teamabhiyaan.com</url>
    <url type="repository">github.com/Jnaneshrompilli/IGVC-Bolt</url>


    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>

    <exec_depend>xacro</exec_depend>

    <depend>gazebo_ros</depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>

    <exec_depend>controller_manager</exec_depend>
    <!--<exec_depend>steer_bot_hardware_gazebo</exec_depend>-->

    <exec_depend>rqt_robot_steering</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>turtlebot3_teleop</exec_depend>
    <exec_depend>rviz</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <gazebo_ros gazebo_media_path="$prefix}"/>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>
</package>